@@ -15,6 +15,8 @@ git-annex (5.20140710) UNRELEASED; urgency=medium
     resolution leave behind old files.
   * Windows: Fix locking issue that prevented the webapp starting
     (since 5.20140707).
+  * sync: Fix git sync with local git remotes even when they don't have an
+    annex.uuid set. (The assistant already did so.)
 
  -- Joey Hess <joeyh@debian.org>  Wed, 09 Jul 2014 23:29:21 -0400
 
